net 10 upgrade
Related work items: #45794
