# app/MaPSCDAService/wwwroot/swagger/v1/maps-cda.json
@@ -47,44 +47,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/RqpResponseModel"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RqpResponseModel"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RqpResponseModel"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": "OK"
           }
         }
       }
@@ -105,44 +68,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/RedirectResponseModel"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RedirectResponseModel"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/RedirectResponseModel"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Bad Request",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "string"
-                }
-              }
-            }
+            "description": "OK"
           }
         }
       }
@@ -168,68 +94,6 @@
   },
   "components": {
     "schemas": {
-      "RedirectResponseModel": {
-        "type": "object",
-        "properties": {
-          "redirectTargetUrl": {
-            "type": "string",
-            "nullable": true
-          },
-          "rqp": {
-            "type": "string",
-            "nullable": true
-          },
-          "scope": {
-            "minLength": 1,
-            "type": "string",
-            "nullable": true
-          },
-          "responseType": {
-            "enum": [
-              "code"
-            ],
-            "type": "string",
-            "description": " (Constant value: code)",
-            "nullable": true
-          },
-          "prompt": {
-            "enum": [
-              "login"
-            ],
-            "type": "string",
-            "description": " (Constant value: login)",
-            "nullable": true
-          },
-          "service": {
-            "minLength": 1,
-            "type": "string",
-            "nullable": true
-          },
-          "codeChallengeMethod": {
-            "enum": [
-              "S256"
-            ],
-            "type": "string",
-            "description": " (Constant value: S256)",
-            "nullable": true
-          },
-          "codeChallenge": {
-            "minLength": 1,
-            "type": "string",
-            "nullable": true
-          },
-          "codeVerifier": {
-            "minLength": 1,
-            "type": "string",
-            "nullable": true
-          },
-          "requestId": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
       "RequestHeaderModel": {
         "required": [
           "iss",
@@ -254,18 +118,15 @@
           }
         },
         "additionalProperties": false
-      },
-      "RqpResponseModel": {
-        "type": "object",
-        "properties": {
-          "rqp": {
-            "pattern": "^[A-Za-z0-9\\-_]+(\\.[A-Za-z0-9\\-_]+){2}$",
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
       }
     }
-  }
+  },
+  "tags": [
+    {
+      "name": "ClaimsRedirect"
+    },
+    {
+      "name": "MapsCdaService"
+    }
+  ]
 }
